--- a/nginx/conf.d/backend.conf
+++ b/nginx/conf.d/backend.conf
@@ -21,8 +21,28 @@ server {
     access_log /var/log/nginx/backend_access.log main;
     error_log /var/log/nginx/backend_error.log warn;
 
-    # Проксирование на backend контейнер
+    # КРИТИЧНО: CORS для Mini App
+    # Обработка preflight OPTIONS запросов
     location / {
+        # Обработка OPTIONS запросов (CORS preflight)
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' 'https://miniapp.micro-tab.ru:4443' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, PATCH, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Init-Data, Accept' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Access-Control-Max-Age' '3600' always;
+            add_header 'Content-Type' 'text/plain; charset=utf-8' always;
+            add_header 'Content-Length' '0' always;
+            return 204;
+        }
+        
+        # CORS заголовки для всех остальных запросов
+        add_header 'Access-Control-Allow-Origin' 'https://miniapp.micro-tab.ru:4443' always;
+        add_header 'Access-Control-Allow-Credentials' 'true' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, PATCH, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Init-Data, Accept' always;
+        
+        # Проксирование на backend контейнер
         proxy_pass http://127.0.0.1:8000;
         proxy_http_version 1.1;
         
